--- a/datalab/README
+++ b/datalab/README
@@ -1,2 +1,3 @@
-assignment is to become more familiar with bit-level representations of integers and
-floating point numbers.
+## Purpose
+The first project allow me to become more familiar with bit-level representations of integers and floating point numbers.
+
